--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.webkit:webkit:1.3.0-rc01" // https://developer.android.com/jetpack/androidx/releases/webkit
 
     // Finally add the `RecyclerView` - The research topic
     // - https://developer.android.com/reference/androidx/recyclerview/widget/RecyclerView
