--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,3 +19,9 @@ jobs:
         java-version: 1.8
     - name: Build with Gradle
       run: ./gradlew ktlintCheck assembleDebug
+
+    - name: Archive APK
+      uses: actions/upload-artifact@v1
+      with:
+        name: app-debug
+        path: app/build/outputs/apk/debug/app-debug.apk
