--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,16 +44,25 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    // https://developer.android.com/jetpack/androidx/releases/core
     implementation 'androidx.core:core-ktx:1.3.0'
+    // https://developer.android.com/jetpack/androidx/releases/appcompat
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
+    // https://developer.android.com/jetpack/androidx/releases/constraintlayout
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    // https://developer.android.com/jetpack/androidx/releases/navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
+    // https://developer.android.com/jetpack/androidx/releases/lifecycle
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    // https://developer.android.com/jetpack/androidx/releases/cardview
     implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.webkit:webkit:1.3.0-rc01" // https://developer.android.com/jetpack/androidx/releases/webkit
+    // https://developer.android.com/jetpack/androidx/releases/webkit
+    implementation "androidx.webkit:webkit:1.3.0-rc01"
+    // https://developer.android.com/jetpack/androidx/releases/emoji
+    implementation "androidx.emoji:emoji:1.1.0"
 
     // Finally add the `RecyclerView` - The research topic
     // - https://developer.android.com/reference/androidx/recyclerview/widget/RecyclerView
