--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
     buildFeatures { // https://developer.android.com/studio/releases/gradle-plugin#buildFeatures
         dataBinding = true
     }
+
+    androidExtensions { // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.android.extensions
+        features = ["parcelize"]
+    }
 }
 
 dependencies {
